--- a/mat_engine/Cargo.toml
+++ b/mat_engine/Cargo.toml
@@ -11,6 +11,12 @@ log = "0.4.8"
 winit = "0.22.1"
 image = "0.23.4"
 futures = "0.3.4"
+imgui = "0.3.0"
+imgui-wgpu = "0.6.0"
+
+# See https://github.com/Gekkio/imgui-rs/issues/305
+# Should be able to remove "=" when https://github.com/Gekkio/imgui-rs/pull/309 is merged
+imgui-winit-support = "=0.3.0" 
 
 # TODO: Configure for other OS's.
 [dependencies.wgpu]
