After a huge amount of effort, and even more time spent fighting with borrowck, the new systems module is finally up and running. Unfortunately, since rust doesn't really support self-referential structures, we did use Rc/Weak. The other alternative would be to pass around either Engine or Systems to all functions that might need them, but I think that would be worse for actually using the API.

--- a/mat_engine/Cargo.toml
+++ b/mat_engine/Cargo.toml
@@ -13,6 +13,7 @@ image = "0.23.4"
 futures = "0.3.4"
 imgui = "0.3.0"
 imgui-wgpu = "0.6.0"
+owning_ref = "0.4.1"
 
 # See https://github.com/Gekkio/imgui-rs/issues/305
 # Should be able to remove "=" when https://github.com/Gekkio/imgui-rs/pull/309 is merged
