--- a/sample_sandbox/Cargo.toml
+++ b/sample_sandbox/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["BuildTools <unconfigured@null.null>"]
 edition = "2018"
 
+# Prevent publishing by mistake
+publish = false
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
