--- a/mat_engine/Cargo.toml
+++ b/mat_engine/Cargo.toml
@@ -25,8 +25,10 @@ lazy_static = "1.4.0"
 #See shaderc docs for info on necessary deps for building.
 shaderc = "0.6"
 
-#I will probably use later... Specifically to check for padding for sending stuff to gpu...
-#static_assertions = "1.1.0"
+bytemuck = "1.2.0"
+zeroable = "0.2.0"
+
+static_assertions = "1.1.0"
 
 # See https://github.com/Gekkio/imgui-rs/issues/305
 # Should be able to remove "=" when https://github.com/Gekkio/imgui-rs/pull/309 is merged
