--- a/mat_engine/Cargo.toml
+++ b/mat_engine/Cargo.toml
@@ -9,34 +9,30 @@ publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
-log = "0.4.8"
-winit = "0.22.1"
-image = "0.23.4"
-futures = "0.3.4"
-imgui = "0.3.0"
-imgui-wgpu = "0.6.0"
-#owning_ref = "0.4.1"
-slotmap = "0.4.0"
-lazy_static = "1.4.0"
-nalgebra-glm = "0.3"
 
+[dependencies]
+log = "0.4.14"
+winit = "0.25.0"
+image = "0.23.14"
+futures = "0.3.17"
+imgui = "0.8.0"
+imgui-wgpu = "0.17.1"
+#owning_ref = "0.4.1"
+slotmap = "1.0.6"
+lazy_static = "1.4.0"
+nalgebra-glm = "0.15"
+anyhow = "1.0.44"
 
 
 #TODO: Seek better alternative -> This takes a long time to build...
 #See shaderc docs for info on necessary deps for building.
-shaderc = "0.6"
+shaderc = "0.7.3"
 
-bytemuck = "1.2.0"
-zeroable = "0.2.0"
+bytemuck = {version = "1.7.2", features = ["derive"]}
+# zeroable = "0.2.0"
 
 static_assertions = "1.1.0"
 
-# See https://github.com/Gekkio/imgui-rs/issues/305
-# Should be able to remove "=" when https://github.com/Gekkio/imgui-rs/pull/309 is merged
-imgui-winit-support = "=0.3.0" 
+imgui-winit-support = "0.8.0" 
 
-# TODO: Configure for other OS's.
-[dependencies.wgpu]
-version = "0.5.0"
-features = ["vulkan"]
+wgpu = "0.10.2"
